package paypals;

import java.util.ArrayList;

public class Activities {
    private Person payer;
    private ArrayList<Person> owedBy = new ArrayList<>();
}
